ski_resort/debug.log
Ошибки в формах: user - <ul class="errorlist"><li>phone_number<ul class="errorlist"><li>Номер должен быть в формате: &#x27;+79991234567&#x27; (ровно 11 цифр)</li><li>Убедитесь, что это значение содержит не более 12 символов (сейчас 18).</li></ul></li></ul>, booking - <ul class="errorlist"><li>__all__<ul class="errorlist nonfield"><li>Выбранное время уже занято.</li></ul></li></ul>
Ошибки в формах: user - <ul class="errorlist"><li>phone_number<ul class="errorlist"><li>Номер должен быть в формате: &#x27;+79991234567&#x27; (ровно 11 цифр)</li><li>Убедитесь, что это значение содержит не более 12 символов (сейчас 18).</li></ul></li></ul>, booking - <ul class="errorlist"><li>end_date<ul class="errorlist"><li>Обязательное поле.</li></ul></li></ul>
Ошибки в формах: user - <ul class="errorlist"><li>phone_number<ul class="errorlist"><li>Убедитесь, что это значение содержит не более 12 символов (сейчас 18).</li><li>Неверный формат номера телефона</li></ul></li></ul>, booking - <ul class="errorlist"><li>user<ul class="errorlist"><li>Обязательное поле.</li></ul></li><li>__all__<ul class="errorlist nonfield"><li>Пользователь не указан</li></ul></li></ul>
Ошибки в формах: user - <ul class="errorlist"><li>phone_number<ul class="errorlist"><li>Убедитесь, что это значение содержит не более 12 символов (сейчас 18).</li><li>Неверный формат номера телефона</li></ul></li></ul>, booking - <ul class="errorlist"><li>user<ul class="errorlist"><li>Обязательное поле.</li></ul></li><li>__all__<ul class="errorlist nonfield"><li>Пользователь не указан</li></ul></li></ul>
Ошибки в формах: user - <ul class="errorlist"><li>phone_number<ul class="errorlist"><li>Убедитесь, что это значение содержит не более 12 символов (сейчас 18).</li><li>Неверный формат номера телефона</li></ul></li></ul>, booking - <ul class="errorlist"><li>user<ul class="errorlist"><li>Обязательное поле.</li></ul></li><li>__all__<ul class="errorlist nonfield"><li>Пользователь не указан</li></ul></li></ul>
Ошибки в формах: user - , booking - <ul class="errorlist"><li>user<ul class="errorlist"><li>Обязательное поле.</li></ul></li><li>__all__<ul class="errorlist nonfield"><li>Пользователь не указан</li></ul></li></ul>
Ошибки в формах: user - , booking - <ul class="errorlist"><li>user<ul class="errorlist"><li>Обязательное поле.</li></ul></li><li>__all__<ul class="errorlist nonfield"><li>Пользователь не указан</li></ul></li></ul>
Ошибки в формах: user - , booking - <ul class="errorlist"><li>user<ul class="errorlist"><li>Обязательное поле.</li></ul></li><li>__all__<ul class="errorlist nonfield"><li>Пользователь не указан</li></ul></li></ul>
Ошибки в формах: user - , booking - <ul class="errorlist"><li>user<ul class="errorlist"><li>Обязательное поле.</li></ul></li><li>__all__<ul class="errorlist nonfield"><li>Пользователь не указан</li></ul></li></ul>
Internal Server Error: /bookings/create-combined/
Traceback (most recent call last):
  File "D:\python\.venv\Lib\site-packages\django\core\handlers\exception.py", line 55, in inner
    response = get_response(request)
  File "D:\python\.venv\Lib\site-packages\django\core\handlers\base.py", line 197, in _get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
  File "D:\python\.venv\Django\ski_project\ski_resort\core\views.py", line 89, in create_combined_booking
    return render(request, 'create_combined.html', {
        'user_form': user_form,
    ...<2 lines>...
        'equipment': Equipment.objects.all(),
    })
  File "D:\python\.venv\Lib\site-packages\django\shortcuts.py", line 25, in render
    content = loader.render_to_string(template_name, context, request, using=using)
  File "D:\python\.venv\Lib\site-packages\django\template\loader.py", line 61, in render_to_string
    template = get_template(template_name, using=using)
  File "D:\python\.venv\Lib\site-packages\django\template\loader.py", line 15, in get_template
    return engine.get_template(template_name)
           ~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "D:\python\.venv\Lib\site-packages\django\template\backends\django.py", line 79, in get_template
    return Template(self.engine.get_template(template_name), self)
                    ~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "D:\python\.venv\Lib\site-packages\django\template\engine.py", line 177, in get_template
    template, origin = self.find_template(template_name)
                       ~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "D:\python\.venv\Lib\site-packages\django\template\engine.py", line 159, in find_template
    template = loader.get_template(name, skip=skip)
  File "D:\python\.venv\Lib\site-packages\django\template\loaders\cached.py", line 57, in get_template
    template = super().get_template(template_name, skip)
  File "D:\python\.venv\Lib\site-packages\django\template\loaders\base.py", line 28, in get_template
    return Template(
        contents,
    ...<2 lines>...
        self.engine,
    )
  File "D:\python\.venv\Lib\site-packages\django\template\base.py", line 154, in __init__
    self.nodelist = self.compile_nodelist()
                    ~~~~~~~~~~~~~~~~~~~~~^^
  File "D:\python\.venv\Lib\site-packages\django\template\base.py", line 196, in compile_nodelist
    nodelist = parser.parse()
  File "D:\python\.venv\Lib\site-packages\django\template\base.py", line 518, in parse
    raise self.error(token, e)
  File "D:\python\.venv\Lib\site-packages\django\template\base.py", line 516, in parse
    compiled_result = compile_func(self, token)
  File "D:\python\.venv\Lib\site-packages\django\template\loader_tags.py", line 295, in do_extends
    nodelist = parser.parse()
  File "D:\python\.venv\Lib\site-packages\django\template\base.py", line 518, in parse
    raise self.error(token, e)
  File "D:\python\.venv\Lib\site-packages\django\template\base.py", line 516, in parse
    compiled_result = compile_func(self, token)
  File "D:\python\.venv\Lib\site-packages\django\template\loader_tags.py", line 234, in do_block
    nodelist = parser.parse(("endblock",))
  File "D:\python\.venv\Lib\site-packages\django\template\base.py", line 518, in parse
    raise self.error(token, e)
  File "D:\python\.venv\Lib\site-packages\django\template\base.py", line 516, in parse
    compiled_result = compile_func(self, token)
  File "D:\python\.venv\Lib\site-packages\django\template\loader_tags.py", line 295, in do_extends
    nodelist = parser.parse()
  File "D:\python\.venv\Lib\site-packages\django\template\base.py", line 518, in parse
    raise self.error(token, e)
  File "D:\python\.venv\Lib\site-packages\django\template\base.py", line 516, in parse
    compiled_result = compile_func(self, token)
  File "D:\python\.venv\Lib\site-packages\django\template\loader_tags.py", line 228, in do_block
    raise TemplateSyntaxError(
        "'%s' tag with name '%s' appears more than once" % (bits[0], block_name)
    )
django.template.exceptions.TemplateSyntaxError: 'block' tag with name 'content' appears more than once
Ошибка при создании: {'__all__': ['Выбранное время уже занято.']}
Ошибки в формах: user - <ul class="errorlist"><li>phone_number<ul class="errorlist"><li>Пользователь с таким номером телефона уже существует.</li><li>Неверный формат номера телефона</li></ul></li></ul>, booking - 
Ошибка создания бронирования: Cannot use None as a query value
Ошибка создания бронирования: Cannot use None as a query value
Ошибка создания бронирования: Cannot use None as a query value
Ошибка: {'end_date': ['Это поле не может иметь значение NULL.']}
Ошибка: {'end_date': ['Это поле не может иметь значение NULL.']}
Ошибка: {'end_date': ['Это поле не может иметь значение NULL.']}
Ошибка: {'end_date': ['Это поле не может иметь значение NULL.']}
